--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,9 @@
 @import "tailwindcss";
 
 
+:root {
+  --breakpoint-xs: 475px;
+}
 /* @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
